--- a/Tetris.html
+++ b/Tetris.html
@@ -4,7 +4,10 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <canvas id="game" width="300" height="600"></canvas>
+    <div id="game-container">
+        <h1>Tetris</h1>
+        <canvas id="game" width="300" height="600"></canvas>
+    </div>
     <script src="java.js"></script>
 </body>
 </html>
